# cough-machine-control

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_ADAFRUIT.txt  requirementsvenv.txt  spraytec_plotter.py  video_maker.py
.config/: file_dialog.ini
Morgan_data/: Morgantonpz.py  PDA_abe.py  getmodesofMorgan.py
Ximea_experimenting/: navtar_1ml.tif
archive/: pumpy3_orig.py  pumpy_orig.py
backup_flow_meter_readout/: flow_meter_test.py  flow_meter_test.txt  plot_flow_rate.py
dripping_droplets_tests/: process_droplets_spacetime.py
filament_width/: contourmap.py  contourmap_v2.py  cuttingoffbranchesexample.py  filament_visualizer.py  readme.txt  visuals_average.py  visuals_average_average.py
flow_meter_readout/: M55_readout_PK.py  M55_readout_PK_withplot.py
functions/: Gupta2009.py  Ximea.py  calibration.py  cvd_check.py  file_dialogs.py  pumpy.py  read_cihx.py
other_side_stuff/: Deborahvsmodedropletsize.py  PIVvsflowmeter.py  PIVvsflowmeter_Linnebank.py  PIVvsflowmeter_Sikkema.py  Spraytec_jet_tester.py  all_coughs.py  calculatingdimensionlessnumbers.xlsx  getscreensfromvideos.py  getscreensfromvideos_fancy.py  gupta_modelcough_imagej.py  height_spraytec.py  makecolorbar.py  proportionalvalve.py  readme.md  smallsketch_describingfilterPIV.py  video_maker.py
piv/: calibration.py  calibration_start_12bit.py  piv.py  piv_functions.py  piv_image_pair.py  test.py  test3.py  test_varwins.py
sensor_calibration/: pressure_calibration.py  pressure_calibration_data.txt  time_utils.py
spraytec/: SPRAYTEC_APPEND_FILE.txt  (+9 more)
(+314 files in other folders)
