[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcm-control"
version = "0.1.0"
description = "Control software for the Twente Cough Machine"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "bronkhorst_propar",
  "daltonlens",
  "h5py",
  "matplotlib",
  "matplotlib_scalebar",
  "natsort",
  "networkx",
  "numba",
  "numpy",
  "opencv_python",
  "pandas",
  "Pillow",
  "pyserial",
  "SciencePlots",
  "scipy",
  "scikit-image",
  "tifffile",
  "tqdm",
  "pipreqs",
  "pumpy3 @ git+https://github.com/WetenSchaap/pumpy3.git",
]

[tool.setuptools]
packages = []
